# progressive-robotics-assessment

./: .gitmodules  Dockerfile  README.md  docker-compose.yml
log/: latest_list
resources/: ur_macro.xacro
src/linear_algebra_service/linear_algebra_common/: CMakeLists.txt  package.xml
src/linear_algebra_service/linear_algebra_common/src/: linear_algebra_client.cpp  linear_algebra_server.cpp
src/linear_algebra_service/linear_algebra_resources/: CMakeLists.txt  package.xml
src/linear_algebra_service/linear_algebra_resources/config/: client_data.yaml
src/linear_algebra_service/linear_algebra_resources/srv/: LeastSquares.srv
src/ur20_display/: CMakeLists.txt  package.xml
src/ur20_display/config/: ur20_joint_configuration_publisher.yaml
src/ur20_display/launch/: inspect_ur20.launch.py
src/ur20_display/rviz/: robot_with_markers.rviz
src/ur20_display/scripts/: joint_configuration_plotter.py
src/ur20_display/src/: joint_configuration_publisher.cpp
